feat(clipboard-copy): added support for truncation

--- a/src/patternfly/components/ClipboardCopy/clipboard-copy.hbs
+++ b/src/patternfly/components/ClipboardCopy/clipboard-copy.hbs
@@ -2,6 +2,7 @@
   {{~#if clipboard-copy--IsExpanded}} pf-m-expanded{{/if}}
   {{~#if clipboard-copy--IsInline}} pf-m-inline{{/if}}
   {{~#if clipboard-copy--IsBlock}} pf-m-block{{/if}}
+  {{~#if clipboard-copy--IsTruncate}} pf-m-truncate{{/if}}
   {{~#if clipboard-copy--modifier}} {{clipboard-copy--modifier}}{{/if}}"
   {{#if clipboard-copy--attribute}}
     {{{clipboard-copy--attribute}}}
