--- a/src/patternfly/components/Menu/menu-item-action.hbs
+++ b/src/patternfly/components/Menu/menu-item-action.hbs
@@ -1,14 +1,13 @@
 <div class="{{pfv}}menu__item-action
   {{setModifiers
     menu-list-item--IsAriaDisabled='pf-m-aria-disabled'
-    menu-item-action--IsFavorited='pf-m-favorited'
     menu-item-action--modifier=menu-item-action--modifier
   }}"
   {{#if menu-item-action--attribute}}
     {{{menu-item-action--attribute}}}
   {{/if}}>
   {{#> button button--role="menuitem" 
-  button--IsPlain=true button--IsIcon=true button--IsDisabled=menu-list-item--IsDisabled button--IsAriaDisabled=menu-list-item--IsAriaDisabled}}
+  button--IsPlain=true button--IsIcon=true button--IsDisabled=menu-list-item--IsDisabled button--IsAriaDisabled=menu-list-item--IsAriaDisabled button--IsFavorite=menu-item-action--IsFavorite button--IsFavorited=menu-item-action--IsFavorited}}
     {{#ifAny menu-item-action--IsFavorite menu-item-action--IsFavorited}}
       {{> button-icon button--icon="star"}}
     {{else if @partial-block}}
