--- a/src/patternfly/components/NotificationDrawer/notification-drawer.scss
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer.scss
@@ -101,7 +101,9 @@
   // Group toggle icon
   --#{$notification-drawer}__group-toggle-icon--MarginInlineEnd: var(--pf-t--global--spacer--md);
   --#{$notification-drawer}__group-toggle-icon--Color: var(--pf-t--global--icon--color--regular);
-  --#{$notification-drawer}__group-toggle-icon--Transition: .2s ease-in 0s;
+  --#{$notification-drawer}__group-toggle-icon--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$notification-drawer}__group-toggle-icon--TransitionDuration: var(--pf-t--global--motion--duration--icon--default);
+  --#{$notification-drawer}__group-toggle-icon--Transition: transform var(--#{$notification-drawer}__group-toggle-icon--TransitionDuration) var(--#{$notification-drawer}__group-toggle-icon--TransitionTimingFunction); // TODO remove in breaking change along with shorthand property
   --#{$notification-drawer}__group--m-expanded__group-toggle-icon--Rotate: 90deg;
 }
 
@@ -308,7 +310,7 @@
 
   margin-inline-end: var(--#{$notification-drawer}__group-toggle-icon--MarginInlineEnd);
   color: var(--#{$notification-drawer}__group-toggle-icon--Color);
-  transition: var(--#{$notification-drawer}__group-toggle-icon--Transition);
+  transition: var(--#{$notification-drawer}__group-toggle-icon--Transition); // TODO remove shorthand in breaking change
 
   .#{$notification-drawer}__group.pf-m-expanded & {
     transform: rotate(var(--#{$notification-drawer}__group--m-expanded__group-toggle-icon--Rotate));
