fix(truncate): added modifier and example for fixed/max characters logic (#7439)

--- a/src/patternfly/components/Truncate/truncate.scss
+++ b/src/patternfly/components/Truncate/truncate.scss
@@ -10,6 +10,12 @@
   grid-auto-flow: column;
   align-items: baseline;
   min-width: var(--#{$truncate}--MinWidth);
+
+  &.pf-m-fixed {
+    display: inline;
+    align-items: revert;
+    min-width: revert;
+  }
 }
 
 .#{$truncate}__start,
