--- a/src/patternfly/components/Drawer/drawer-splitter.hbs
+++ b/src/patternfly/components/Drawer/drawer-splitter.hbs
@@ -1,6 +1,7 @@
 <div class="{{pfv}}drawer__splitter{{#if drawer-splitter--modifier}} {{drawer-splitter--modifier}}{{/if}}{{#if drawer-splitter--IsVertical}} pf-m-vertical{{/if}}"
   role="separator"
   tabindex="0"
+  aria-valuenow="50"
   {{#if drawer-splitter--IsVertical}}
     aria-orientation="vertical"
   {{else}}
