--- a/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
@@ -9,7 +9,7 @@
     button--aria-describedby=table-tr--IsExpanded
     button--aria-label=(ternary IsThead 'Toggle all rows' 'Toggle row')
     button--aria-labelledby=(dasherize table--id 'node' table-tr--index)
-    button--aria-controls=(dasherize table--id 'content' table-tr--index)
+    button--aria-controls=(ternary table-tr--aria-controls table-tr--aria-controls (dasherize table--id 'content' table-tr--index))
     button--id=(dasherize table--id 'expandable-toggle' table-tr--index)}}
 
     {{> table-toggle-icon}}
